quoting-CypressTK1/force-app/main/default/objects/ResourceAvailability__c/ResourceAvailability__c.object-meta.xml
<CustomObject>
    <description
	>Captures the maximum time a resource is available to work for a given period</description>
    <label>Resource Availability</label>
    <nameField>
        <displayFormat>RA-{00000}</displayFormat>
        <label>Resource Availability</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Availabilities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>