quoting-CypressTK1/force-app/main/default/objects/ResourceAvailability__c/fields/AvailabilityPercentage__c.field-meta.xml
<CustomField>
    <fullName>AvailabilityPercentage__c</fullName>
    <label>Availability Percentage</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>