quoting-CypressTK1/force-app/main/default/objects/ResourceAvailability__c/fields/FullTimeTotalEstimatedDuration__c.field-meta.xml
<CustomField>
    <fullName>FullTimeTotalEstimatedDuration__c</fullName>
    <formula
	>IF(AvailabilityPercentage__c == NULL, TaskRoleSummaryId__r.TotalEstimatedDuration__c, IF(AvailabilityPercentage__c == 0, 0, TaskRoleSummaryId__r.TotalEstimatedDuration__c * (1 / AvailabilityPercentage__c)))</formula>
    <label>Full Time Total Estimated Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>